# Battle-Snake

./: .gitignore  1111.py  50  challenge  compile_cpp.sh  lektuere  run_game.py  run_server.py  show_replay.py  test  test.idb
CPPlinux/minmax/3snake_ohne_pthread/: A_Algorithmus.cpp  BoardControl.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  library.cpp  library.h  mcts.cpp  simulator_environment.h  uct_node.cpp  uct_node.h
CPPlinux/minmax/4snake_ohne_pthread/: A_Algorithmus.cpp  BoardControl.cpp  BoardControl.h  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  library.cpp  simulator_environment.h  uct_node.cpp  uct_node.h
CPPlinux/minmax/duel_ohne_pthread/: A_Algorithmus.cpp  A_Algorithmus.h  BoardControl.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  library.cpp  library.h  mcts.cpp  simulator_environment.h  uct_node.cpp  uct_node.h
CPPlinux/minmax/pthread/: BoardControl.cpp  CMakeCache.txt  CMakeLists.txt  (+7 more)
CPPlinux/untitled2/: CMakeLists.txt  library.cpp  mcts.cpp  mcts.h  uct_node.h
CPPwin/untitled2/: BoardControl.cpp  CMakeLists.txt  library.cpp  mcts.cpp  mcts.h  simulator_environment.cpp  simulator_environment.h  uct_node.h
agents/KILabAgentGroup8/: KILabAgent.py  KILabAgentMCTS.py  KILabAgentNewMinMax.py  KILabAgentOldMinMax.py  KILabAgentOldOnServer.py  KILabAgentV.py  SimulatorAgent.py  Test.py  mcts.py  mctsC.py  simulator_environment.py  uct_node.py  uct_nodeC.py  zeichen.py
agents/RandomAgent/: RandomAgent.py
environment/: battlesnake_environment.py
environment/Battlesnake/: server.py
(+64 files in other folders)
